@@ -6,8 +6,9 @@ workout (0.13) unstable; urgency=low
   * Store->chunk_add() no longer clones the chunk!!!!
   * removed now unneeded Store->_chunk_add
   * converted Store::Gpx to XML::SAX
+  * fixed encoding for (new)Gpx, HRM and Wkt Stores
 
- -- Rainer Clasen <bj@zuto.de>  Sun, 06 Dec 2009 23:17:41 +0100
+ -- Rainer Clasen <bj@zuto.de>  Mon, 07 Dec 2009 14:58:41 +0100
 
 workout (0.12) unstable; urgency=low
 
